--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DorkGamer's Website</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="Main.css" />
   <meta property="og:site_name" content="Roblox" />
   <meta property="og:title" content="JJEELLKKEEPP1's Profile" />
   <meta
